--- a/Buoi2/Mam-non-Chuon-chuon-ot.html
+++ b/Buoi2/Mam-non-Chuon-chuon-ot.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>
-        <a href="/1-Gioi-thieu.html">Giới thiệu</a>
+        <a href="https://trantientb.github.io/Buoi2/1-Gioi-thieu.html">Giới thiệu</a>
     </h3>
   
     <h3>
