--- a/Buoi2/Mam-non-Chuon-chuon-ot.html
+++ b/Buoi2/Mam-non-Chuon-chuon-ot.html
@@ -12,15 +12,15 @@
     </h3>
   
     <h3>
-        <a href="/2-Chuong-trinh-hoc-1.html">Chương trình học</a>  
+        <a href="./2-Chuong-trinh-hoc-1.html">Chương trình học</a>  
     </h3>
   
     <h3>
-        <a href="/3-Thuc-don.html">Thực đơn</a>  
+        <a href="./3-Thuc-don.html">Thực đơn</a>  
     </h3>
     
     <h3>
-        <a href="/4-Lien-he.html">Liên hệ</a>  
+        <a href="./4-Lien-he.html">Liên hệ</a>  
     </h3>
 
     <img src="JPG/Logo-Chuon-chuon-ot.jpg" alt="LOGO CCO" width="1000">
