--- a/Buoi2/1-Gioi-thieu.html
+++ b/Buoi2/1-Gioi-thieu.html
@@ -13,19 +13,19 @@
     </h3>
     
       <h3>
-      <a href="/1-Gioi-thieu.html">Giới thiệu</a>
+      <a href="./1-Gioi-thieu.html">Giới thiệu</a>
   </h3>
 
   <h3>
-      <a href="/2-Chuong-trinh-hoc-1.html">Chương trình học</a>  
+      <a href="./2-Chuong-trinh-hoc-1.html">Chương trình học</a>  
   </h3>
 
   <h3>
-      <a href="/3-Thuc-don.html">Thực đơn</a>  
+      <a href="./3-Thuc-don.html">Thực đơn</a>  
   </h3>
   
   <h3>
-      <a href="/4-Lien-he.html">Liên hệ</a>  
+      <a href="./4-Lien-he.html">Liên hệ</a>  
   </h3>
 
     <h2>Mầm non Chuồn chuồn ớt - "Nơi cá không phải leo cây"</h2>
