--- a/Buoi2/2-Chuong-trinh-hoc-1.html
+++ b/Buoi2/2-Chuong-trinh-hoc-1.html
@@ -9,24 +9,24 @@
   <body>
  
     <h3>
-      <a href="/Mam-non-Chuon-chuon-ot.html">Trang chủ</a>
+      <a href="./Mam-non-Chuon-chuon-ot.html">Trang chủ</a>
     </h3>
     
 
     <h3>
-      <a href="/1-Gioi-thieu.html">Giới thiệu</a>
+      <a href="./1-Gioi-thieu.html">Giới thiệu</a>
   </h3>
 
   <h3>
-      <a href="/2-Chuong-trinh-hoc-1.html">Chương trình học</a>  
+      <a href="./2-Chuong-trinh-hoc-1.html">Chương trình học</a>  
   </h3>
 
   <h3>
-      <a href="/3-Thuc-don.html">Thực đơn</a>  
+      <a href="./3-Thuc-don.html">Thực đơn</a>  
   </h3>
   
   <h3>
-      <a href="/4-Lien-he.html">Liên hệ</a>  
+      <a href="./4-Lien-he.html">Liên hệ</a>  
   </h3>
 
     <img src="JPG/bien-ten-mau-giao.jpg" alt="lớp mẫu giáo" width="300" />
