--- a/Buoi2/1-Gioi-thieu.html
+++ b/Buoi2/1-Gioi-thieu.html
@@ -9,7 +9,7 @@
   <body>
   
     <h3>
-      <a href="/Mam-non-Chuon-chuon-ot.html">Trang chủ</a>
+      <a href="./Mam-non-Chuon-chuon-ot.html">Trang chủ</a>
     </h3>
     
       <h3>
