Bài tập về nhà Buổi 2. sửa lần 2

--- a/Buoi2/1-Gioi-thieu.html
+++ b/Buoi2/1-Gioi-thieu.html
@@ -28,7 +28,7 @@
       <a href="./4-Lien-he.html">Liên hệ</a>  
   </h3>
 
-    <h2>Mầm non Chuồn chuồn ớt - "Nơi cá không phải leo cây"</h2>
+    <h2>MẦM NON CHUỒN CHUỒN ỚT - "Nơi cá không phải leo cây"</h2>
 
     <img
       src="JPG/noi-ca-khong-phai-leo-cay-1.jpg"
