--- a/Buoi2/2-Chuong-trinh-hoc-1.html
+++ b/Buoi2/2-Chuong-trinh-hoc-1.html
@@ -7,7 +7,7 @@
     <title>CHƯƠNG TRÌNH HỌC</title>
   </head>
   <body>
- 
+       
     <h3>
       <a href="./Mam-non-Chuon-chuon-ot.html">Trang chủ</a>
     </h3>
@@ -29,6 +29,8 @@
       <a href="./4-Lien-he.html">Liên hệ</a>  
   </h3>
 
+  <h2>CHƯƠNG TRÌNH HỌC CHO CÁC BÉ TẠI TRƯỜNG MẦM NON CHUỒN CHUỒN ỚT</h2>
+
     <img src="JPG/bien-ten-mau-giao.jpg" alt="lớp mẫu giáo" width="300" />
 
     <p>
@@ -45,7 +47,7 @@
     <img
       src="JPG/Chuong-trinh-hoc-Mau-giao.jpg"
       alt="Chương trình học mẫu giáo"
-      width="900"
+      width="500"
     />
 
     <p>
@@ -90,7 +92,7 @@
     <img
       src="JPG/Chuong-trinh-hoc-Nha-tre.jpg"
       alt="Chương trình học nhà trẻ"
-      width="900"
+      width="500"
     />
 
     <p>
