--- a/Buoi2/Mam-non-Chuon-chuon-ot.html
+++ b/Buoi2/Mam-non-Chuon-chuon-ot.html
@@ -7,22 +7,33 @@
     <title>TRANG CHỦ</title>
 </head>
 <body>
+   
+   <h1>MẦM MON CHUỒN CHUỒN ỚT</h1>
+   <h2>"Ươm mầm trí tuệ - Chắp cánh ước mơ"</h2>
+
     <h3>
         <a href="./1-Gioi-thieu.html">Giới thiệu</a>
     </h3>
   
+    <img src="JPG/truong-cco.jpg" alt="trường CC0" width="300">
+
     <h3>
         <a href="./2-Chuong-trinh-hoc-1.html">Chương trình học</a>  
     </h3>
   
+    <img src="JPG/Anh-chuong-trinh.jpg" alt="Ảnh chương trình học" width="300">
+
     <h3>
         <a href="./3-Thuc-don.html">Thực đơn</a>  
     </h3>
     
+    <img src="JPG/thuc-don.png" alt="Thực đơn" width="300">
+
     <h3>
         <a href="./4-Lien-he.html">Liên hệ</a>  
     </h3>
 
-    <img src="JPG/Logo-Chuon-chuon-ot.jpg" alt="LOGO CCO" width="1000">
+    <img src="JPG/Lien-he.png" alt="Liên hệ" width="300">
+
    </body>
 </html>
