--- a/buoi-4/bai-tap-ve-nha/index.html
+++ b/buoi-4/bai-tap-ve-nha/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DemoCSS</title>
 
-    <link rel="stylesheet" href="/bai-tap-ve-nha/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
