Sua bai 4 lan cuoi

--- a/Buoi2/Mam-non-Chuon-chuon-ot.html
+++ b/Buoi2/Mam-non-Chuon-chuon-ot.html
@@ -1,39 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TRANG CHỦ</title>
-</head>
-<body>
-   
-   <h1>MẦM MON CHUỒN CHUỒN ỚT</h1>
-   <h2>"Ươm mầm trí tuệ - Chắp cánh ước mơ"</h2>
+  </head>
+  <body>
+    <h1 style="font-size: 30px; color: red">MẦM MON CHUỒN CHUỒN ỚT</h1>
+    <h2 style="font-size: 25px; color: #1e3799; text-decoration: underline">
+      "Ươm mầm trí tuệ - Chắp cánh ước mơ"
+    </h2>
 
     <h3>
-        <a href="./1-Gioi-thieu.html">Giới thiệu</a>
+        <a href="./1-Gioi-thieu.html" style="
+        font-size: 20px;
+        color: #079992;
+        text-decoration: none;
+        font-family: system-ui;
+    ">Giới thiệu
+            <p>
+              <img src="JPG/truong-cco.jpg" alt="trường CC0" width="300">
+            </p>
+          </a>
     </h3>
-  
-    <img src="JPG/truong-cco.jpg" alt="trường CC0" width="300">
 
     <h3>
-        <a href="./2-Chuong-trinh-hoc-1.html">Chương trình học</a>  
+        <a href="./2-Chuong-trinh-hoc-1.html" style="
+        font-family: system-ui;
+        font-size: 20px;
+        color: #ff793f;
+        text-decoration: none;
+    ">Chương trình học
+            <p>
+              <img src="JPG/Anh-chuong-trinh.jpg" alt="Ảnh chương trình học" width="300">
+            </p>
+          </a>
     </h3>
-  
-    <img src="JPG/Anh-chuong-trinh.jpg" alt="Ảnh chương trình học" width="300">
 
     <h3>
-        <a href="./3-Thuc-don.html">Thực đơn</a>  
+        <a href="./3-Thuc-don.html" style="
+        font-size: 20px;
+        color: #FC427B;
+        text-decoration: none;
+        font-family: system-ui;
+    ">Thực đơn
+            <p>
+              <img src="JPG/thuc-don.png" alt="Thực đơn" width="300">
+            </p>
+          </a>
     </h3>
-    
-    <img src="JPG/thuc-don.png" alt="Thực đơn" width="300">
 
     <h3>
-        <a href="./4-Lien-he.html">Liên hệ</a>  
+      <a href="./4-Lien-he.html"
+        >Liên hệ
+        <p>
+          <img src="JPG/Lien-he.png" alt="Liên hệ" width="300" />
+        </p>
+      </a>
     </h3>
-
-    <img src="JPG/Lien-he.png" alt="Liên hệ" width="300">
-
-   </body>
+  </body>
 </html>
