BTVN-buoi-5-final

--- a/buoi-5/btvn/index.html
+++ b/buoi-5/btvn/index.html
@@ -14,23 +14,23 @@
       <div class="list-img">
 
         <div class="img1">
-          <a href=""><img src="/img/1.jpg" alt="hải cẩu"></a>
+          <a href=""><img src="img/1.jpg" alt="hải cẩu"></a>
         </div>
               
         <div class="img2">
-          <a href=""><img src="/img/2.png" alt="tê giác"></a>
+          <a href=""><img src="img/2.png" alt="tê giác"></a>
         </div>
   
         <div class="img3">
-          <a href=""><img src="/img/3.jpg" alt="vịt"></a>
+          <a href=""><img src="img/3.jpg" alt="vịt"></a>
         </div>
   
         <div class="img4">
-          <a href=""><img src="/img/4.jpg" alt="chim sẻ"></a>
+          <a href=""><img src="img/4.jpg" alt="chim sẻ"></a>
         </div>
   
         <div class="img5">
-          <a href=""><img src="/img/5.jpg" alt="bọ ngựa"></a>
+          <a href=""><img src="img/5.jpg" alt="bọ ngựa"></a>
         </div>
   
         <div class="img6">
@@ -38,15 +38,15 @@
         </div>
   
         <div class="img7">
-          <a href=""><img src="/img/7.jpg" alt="gà"></a>
+          <a href=""><img src="img/7.jpg" alt="gà"></a>
         </div>
   
         <div class="img8">
-          <a href=""><img src="/img/8.jpg" alt="ếch"></a>
+          <a href=""><img src="img/8.jpg" alt="ếch"></a>
         </div>
   
         <div class="img9">
-          <a href=""><img src="/img/9.jpg" alt="ốc"></a>
+          <a href=""><img src="img/9.jpg" alt="ốc"></a>
         </div>     
   
       </div>
